# compraqui

./: .gitignore  Cargo.toml  README.md  index.html  package.json  register.html  style.css
assets/css/: general.css  header.css  login.css
src/: lib.rs  main.rs
src/components/: cart_product.rs  footer.rs  header.rs
src/routes/: cart.rs  home.rs  login.rs  mod.rs  product.rs  register.rs
static/: index.html  login.html  register.html
static/templates/: header.html  scroll_top.html
static/user/: login.html  register.html
static/view/css/: header.css
static/view/templates/: header.html
static/view/user/: profile.html  wallet.html
view/: done.html  index.html  login.html  product.html  register.html  wallet.html
view/css/: general.css  header.css  login.css  profile.css  register.css  style.css  wallet.css
view/products/: product.html  product_info.html
view/registration/: register.html  wallet.html
view/templates/: footer.html  header.html  product.html
view/user/: login.html  profile.html  register.html  wallet.html
