[package]
name = "compraqui"
version = "0.1.0"
repository = "https://github.com/gabcchaves/compraqui"
authors = ["Gabriel Costa Chaves <gabcchaves@zohomail.com>"]
edition = "2021"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies]
seed = "0.9.2"
rocket = "0.5.0-rc.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
