[package]
name = "compraqui"
version = "0.1.0"
edition = "2021"
authors = ["Gabriel Costa Chaves"]

# dependencies
[dependencies.wasm-bindgen]
version = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
features = [
	"Document",
	"FormData",
	"HtmlElement",
	"HtmlFormElement",
	"Window",
]

[dependencies.yew]
version = "0.19.3"
